--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -6,9 +6,18 @@
 
     {{ form_start(formArticle )}}
 
-    {{ form_widget(formArticle )}}
+    {{ form_row(formArticle.title,{'attr' : {'placeholder' : "Titre de l'article",'class' : 'form-control'}} )}}
+    {{ form_row(formArticle.content ,{'attr' : {'placeholder' : "Contenu de l'article",'class' : 'form-control'}} )}}
+    {{ form_row(formArticle.image ,{'attr' : {'placeholder' : "URL de l'image",'class' : 'form-control mb-3'}} )}}
     
-    <button type="submit" class="btn btn-success">Ajouter l'article</button>
+    
+    <button type="submit" class="btn btn-success">
+    {% if editMode %}
+        Enregistrer les modifications
+    {% else %}
+        Ajouter l'article
+    {% endif %}
+    </button>
     {{ form_end(formArticle )}}
 
 {% endblock %}
