--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<h1>Bienvenue {{user}}</h1>
+<h1>Bienvenue BG {{user}}</h1>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam perspiciatis at delectus velit debitis unde ea incidunt tenetur quis praesentium.</p>
 <p>Minima nesciunt enim amet eaque magnam ut, itaque deleniti dolore ratione nisi nihil est sint officia magni delectus cum accusantium?</p> 
