--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('blog_create') }}">Créer un article</a>
                     </li>
+                   
+                    {% if is_granted('ROLE_SUPER_ADMIN_1') %}
+                    <a class="nav-link" href="{{ path('show_dash') }}">Dashboard</a>
+                    {% endif %}
+                    {% if is_granted('ROLE_USER') %}
+                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a> {% else %}
+                    <a class="nav-link" href="{{ path('app_login') }}">Login</a>
+                    <a class="nav-link" href="{{ path('app_register') }}">Signup</a> {% endif %}
+                    
                 </ul>
                 
                 </div>
