--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -16,4 +16,10 @@
     </article>
     {% endfor %}
 </section>
+<div class="text-center">
+<div class="text-center">
+    {{ knp_pagination_render(articles) }}
+</div>
+</div>
+        
 {% endblock %}
