--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,15 +3,22 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h1>Inscription</h1>
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.username) }}
+        {{ form_row(registrationForm.nom) }}
+        {{ form_row(registrationForm.prenom) }}
+        {{ form_row(registrationForm.tel) }}
+        {{ form_row(registrationForm.formation_iut) }}
+        {{ form_row(registrationForm.promotion) }}
+        {{ form_row(registrationForm.formation_apres_iut) }}
+        {{ form_row(registrationForm.profession) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-warning">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
