--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="{{ path('home') }}">Home
+                        <a class="nav-link" href="{{ path('home') }}">Home
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
@@ -36,8 +36,8 @@
                         <a class="nav-link" href="{{ path('blog_create') }}">Créer un article</a>
                     </li>
                    
-                    {% if is_granted('ROLE_SUPER_ADMIN_1') %}
-                    <a class="nav-link" href="{{ path('show_dash') }}">Dashboard</a>
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <a class="nav-link" href="{{ path('admin_evenements') }}">Dashboard</a>
                     {% endif %}
                     {% if is_granted('ROLE_USER') %}
                     <a class="nav-link" href="{{ path('app_logout') }}">Logout</a> {% else %}
